test/sema/typeck/class/as-identifier.out
error: value expected
--> as-identifier.dora:2:10
 | class X
 | fn f() { X; }
            ~
 | 
1 error found.
